# pyfgs

./: .pre-commit-config.yml  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/: dependabot.yml
.github/actions/: dependabot.yml  publish.yml  pypi_publish.yml
.github/workflows/: CI.yml  benchmark.yml  ci.yml  docs.yml  publish.yml  release_a_changelog.yml
api/: index.html
benches/: bench_accuracy.py  benchmark.py
benches/data/: download.py
dev/bench/: data.js
docs/: api.md  benchmarks.md
overrides/: home.html
python/: __init__.py  __init__.pyi  cli.py
python/pyfgs/: __init__.py  __init__.pyi  cli.py
search/: search_index.json
src/: lib.rs
tests/: test_fasta_reader.py  test_pyfgs.py
tests/data/: GCF_001457455.1_NCTC11397_genomic.fna
